<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_menu"
            android:textSize="36sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- Button for Chicago Style Pizza -->
        <Button
            android:id="@+id/btnChicagoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chicago_style_pizza"
            android:layout_marginBottom="16dp" />

        <!-- Button for NY Style Pizza -->
        <Button
            android:id="@+id/btnNYStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ny_style_pizza"
            android:layout_marginBottom="16dp" />

        <!-- Button for Current Order -->
        <Button
            android:id="@+id/btnCurrentOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_order"
            android:layout_marginBottom="16dp" />

        <!-- Button for Orders Placed -->
        <Button
            android:id="@+id/btnOrdersPlaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_placed"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>
