<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FFFF"
    android:padding="20dp"
    tools:context="com.example.CurrentOrderActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_order"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/orderNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number" />

        <EditText
            android:id="@+id/orderNumberField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:enabled="false" />
    </LinearLayout>

    <ListView
        android:id="@+id/pizzaListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/orderNumberContainer"
        app:layout_constraintBottom_toTopOf="@id/priceContainer" />

    <GridLayout
        android:id="@+id/priceContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtotal" />

            <EditText
                android:id="@+id/subtotalField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sales_tax" />

            <EditText
                android:id="@+id/salesTaxField"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:enabled="false" />
        </LinearLayout>

        <Button
            android:id="@+id/removePizzaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_pizza"
            android:backgroundTint="#E0E0E0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_columnSpan="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_total" />

            <EditText
                android:id="@+id/orderTotalField"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/placeOrderButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:backgroundTint="#0000FF"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/clearOrderButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_order"
                android:layout_marginStart="10dp"
                android:backgroundTint="#E0E0E0" />
        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>